data/derived/comb/progs/unify/prog6736.ml.out
Characters 114-115:
  clone(0 n)
        ^
Error: This expression has type int
       This is not a function; it cannot be applied.
